--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>My places</title>
+    <script async
+    src=%REACT_APP_API_KEY%>
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="drawer-hook"></div>
+    <div id="modal-hook"></div>
     <div id="backdrop-hook"></div>
     <div id="root"></div>
     <!--
@@ -41,5 +45,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
   </body>
 </html>
