--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>iPlaces</title>
     <script async
-    src=%REACT_APP_API_KEY%>  
-    </script>
+    src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_API_GOOGLE_KEY%">
+  </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
